@@ -1,5 +1,5 @@
 ############################################################################
-# configs/stm3240g-eval/nsh/defconfig
+# configs/stm3240g-eval/dhcpd/defconfig
 #
 #   Copyright (C) 2011 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
@@ -419,10 +419,6 @@ CONFIG_HAVE_LIBM=n
 CONFIG_DEBUG=n
 CONFIG_DEBUG_VERBOSE=n
 CONFIG_DEBUG_SYMBOLS=n
-CONFIG_DEBUG_FS=n
-CONFIG_DEBUG_GRAPHICS=n
-CONFIG_DEBUG_LCD=n
-CONFIG_DEBUG_USB=n
 CONFIG_DEBUG_NET=n
 CONFIG_HAVE_CXX=y
 CONFIG_MM_REGIONS=2
@@ -432,7 +428,7 @@ CONFIG_SCHED_INSTRUMENTATION=n
 CONFIG_TASK_NAME_SIZE=0
 CONFIG_START_YEAR=2011
 CONFIG_START_MONTH=12
-CONFIG_START_DAY=6
+CONFIG_START_DAY=13
 CONFIG_GREGORIAN_TIME=n
 CONFIG_JULIAN_TIME=n
 CONFIG_DEV_CONSOLE=y
@@ -486,11 +482,11 @@ CONFIG_SYMTAB_ORDEREDBYNAME=y
 #
 CONFIG_DISABLE_CLOCK=n
 CONFIG_DISABLE_POSIX_TIMERS=n
-CONFIG_DISABLE_PTHREAD=n
+CONFIG_DISABLE_PTHREAD=y
 CONFIG_DISABLE_SIGNALS=n
-CONFIG_DISABLE_MQUEUE=n
-CONFIG_DISABLE_MOUNTPOINT=n
-CONFIG_DISABLE_ENVIRON=n
+CONFIG_DISABLE_MQUEUE=y
+CONFIG_DISABLE_MOUNTPOINT=y
+CONFIG_DISABLE_ENVIRON=y
 CONFIG_DISABLE_POLL=y
 
 #
@@ -561,20 +557,20 @@ CONFIG_ARCH_BZERO=n
 #   timer structures to minimize dynamic allocations.  Set to
 #   zero for all dynamic allocations.
 #
-CONFIG_MAX_TASKS=16
+CONFIG_MAX_TASKS=8
 CONFIG_MAX_TASK_ARGS=4
-CONFIG_NPTHREAD_KEYS=4
+CONFIG_NPTHREAD_KEYS=0
 CONFIG_NFILE_DESCRIPTORS=8
 CONFIG_NFILE_STREAMS=8
 CONFIG_NAME_MAX=32
-CONFIG_STDIO_BUFFER_SIZE=256
-CONFIG_STDIO_LINEBUFFER=y
-CONFIG_NUNGET_CHARS=2
-CONFIG_PREALLOC_MQ_MSGS=4
-CONFIG_MQ_MAXMSGSIZE=32
+CONFIG_STDIO_BUFFER_SIZE=0
+CONFIG_STDIO_LINEBUFFER=n
+CONFIG_NUNGET_CHARS=0
+CONFIG_PREALLOC_MQ_MSGS=0
+CONFIG_MQ_MAXMSGSIZE=0
 CONFIG_MAX_WDOGPARMS=2
-CONFIG_PREALLOC_WDOGS=4
-CONFIG_PREALLOC_TIMERS=4
+CONFIG_PREALLOC_WDOGS=8
+CONFIG_PREALLOC_TIMERS=8
 
 #
 # Framebuffer driver options
@@ -628,7 +624,7 @@ CONFIG_FB_HWCURSORIMAGE=n
 #   option will enable a limited form of memory mapping that is
 #   implemented by copying whole files into memory.
 #
-CONFIG_FS_FAT=y
+CONFIG_FS_FAT=n
 CONFIG_FAT_LCNAMES=y
 CONFIG_FAT_LFN=y
 CONFIG_FAT_MAXFNAME=32
@@ -731,23 +727,23 @@ CONFIG_NET_MULTIBUFFER=y
 CONFIG_NET_IPv6=n
 CONFIG_NSOCKET_DESCRIPTORS=10
 CONFIG_NET_SOCKOPTS=y
-CONFIG_NET_BUFSIZE=562
-CONFIG_NET_TCP=y
+CONFIG_NET_BUFSIZE=420
+CONFIG_NET_TCP=n
 CONFIG_NET_TCP_CONNS=40
 #CONFIG_NET_TCP_READAHEAD_BUFSIZE
-CONFIG_NET_NTCP_READAHEAD_BUFFERS=16
-CONFIG_NET_TCPBACKLOG=y
-CONFIG_NET_MAX_LISTENPORTS=40
+CONFIG_NET_NTCP_READAHEAD_BUFFERS=8
+CONFIG_NET_TCPBACKLOG=n
+CONFIG_NET_MAX_LISTENPORTS=8
 CONFIG_NET_UDP=y
 CONFIG_NET_UDP_CHECKSUMS=y
 #CONFIG_NET_UDP_CONNS=10
 CONFIG_NET_ICMP=y
-CONFIG_NET_ICMP_PING=y
+CONFIG_NET_ICMP_PING=n
 #CONFIG_NET_PINGADDRCONF=0
-CONFIG_NET_STATISTICS=y
+CONFIG_NET_STATISTICS=n
 #CONFIG_NET_RECEIVE_WINDOW=
 #CONFIG_NET_ARPTAB_SIZE=8
-CONFIG_NET_BROADCAST=n
+CONFIG_NET_BROADCAST=y
 #CONFIG_NET_FWCACHE_SIZE=2
 
 #
@@ -1027,6 +1023,14 @@ CONFIG_EXAMPLE_NETTEST_IPADDR=(10<<24|0<<16|0<<8|2)
 CONFIG_EXAMPLE_NETTEST_DRIPADDR=(10<<24|0<<16|0<<8|1)
 CONFIG_EXAMPLE_NETTEST_NETMASK=(255<<24|255<<16|255<<8|0)
 CONFIG_EXAMPLE_NETTEST_CLIENTIP=(10<<24|0<<16|0<<8|1)
+
+#
+# Settings for examples/dhcpd
+#
+CONFIG_EXAMPLE_DHCPD_NOMAC=y
+CONFIG_EXAMPLE_DHCPD_IPADDR=(10<<24|0<<16|0<<8|1)
+CONFIG_EXAMPLE_DHCPD_DRIPADDR=(10<<24|0<<16|0<<8|1)
+CONFIG_EXAMPLE_DHCPD_NETMASK=(255<<24|255<<16|255<<8|0)
 
 #
 # Settings for examples/ostest
